--- a/style.css
+++ b/style.css
@@ -2,3 +2,38 @@
     padding: 0;
     margin: 0;
 }
+body {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.parent-container {
+    width: 375px;
+    margin: 0 auto;
+    justify-content: center;
+    margin-top: 80px;
+    border: 1px solid;
+}
+
+.primary-nav {
+    display: flex;
+    gap: 80px;
+    justify-content: center;
+    padding: 20px 0px;
+    font-family: "Raleway", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400, 700;
+    font-style: normal;
+}
+
+.primary-nav-ul {
+    display: flex;
+    list-style: none;
+    gap: 15px;
+}
+
+.logo-img {
+    width: 20%;
+}
