--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-
 .parent-container {
     width: 375px;
     margin: 0 auto;
@@ -16,7 +15,6 @@ body {
     margin-top: 80px;
     border: 1px solid;
 }
-
 .primary-nav {
     display: flex;
     gap: 80px;
@@ -27,13 +25,72 @@ body {
     font-weight: 400, 700;
     font-style: normal;
 }
-
 .primary-nav-ul {
     display: flex;
     list-style: none;
     gap: 15px;
 }
-
 .logo-img {
     width: 20%;
+}
+.container-1 {
+    text-align: center;
+    width: 100%;
+}
+.folder-of-information {
+    width: 80%;
+    margin: 10% 0%;
+}
+.container-1-h2 {
+    font-size: 1.3rem;
+    margin: 0 auto;
+    line-height: 1.6;
+    width: 80%;
+}
+.container-1-p {
+    font-size: 0.9rem;
+    margin: 0 auto;
+    line-height: 1.2;
+    width: 80%;
+    padding: 6% 0%;
+}
+.email-request {
+    width: 80%;
+    padding: 3% 0%;
+    margin: 4% 0%;
+    border: 1px solid rgb(117, 115, 115);
+    border-radius: 3px;
+}
+input.email-request::placeholder {
+    padding-left: 20px;
+    color: hsl(0, 0%, 75%);
+}
+.container-1-btn {
+    margin-top: 6%;
+    margin-bottom: 10%;
+    width: 80%;
+    padding: 3% 0%;
+    background-color: hsl(224, 93%, 58%);
+    color: white;
+    border: 1px solid hsl(224, 93%, 58%);
+    border-radius: 4px;
+}
+.container-1-btn a {
+    color: white;
+    text-decoration: none;
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1rem;
+}
+.container-1-btn:hover {
+    transition: 1s;
+    cursor: pointer;
+    background-color: hsl(224, 69%, 44%);
+}
+.container-1-btn a:hover {
+    transition: 1s;
+    cursor: pointer;
+    font-weight: 500;
 }
