--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ body {
     list-style: none;
     gap: 15px;
 }
+.primary-nav-ul li {
+    font-weight: 600;
+}
 .logo-img {
     width: 20%;
 }
@@ -37,7 +40,7 @@ body {
     text-align: center;
     width: 100%;
 }
-.folder-of-information {
+.container-1-img {
     width: 80%;
     margin: 10% 0%;
 }
@@ -93,4 +96,78 @@ input.email-request::placeholder {
     transition: 1s;
     cursor: pointer;
     font-weight: 500;
+}
+.container-2 {
+    text-align: center;
+    width: 100%;
+}
+.container-2-img1 {
+    width: 100%;
+}
+.container-2-img2 {
+    width: 80%;  
+    
+}
+.container-2-h3 {
+    margin: 10% 0%;
+}
+.curve {
+    line-height: 0;
+}
+.subcontainer-2 {
+    background-color: hsl(240, 75%, 98%);
+    padding-bottom: 10%;
+}
+.subcontainer-2p {
+    width: 90%;
+    font-size: 0.97rem;
+    text-align: left;
+    margin-left: 4%;
+    color: hsl(0, 1%, 43%);
+}
+.subcontainer-2p-arrow {
+    margin: 6% auto;
+    text-align: center;
+    border-bottom: 1px solid;
+    width: 50%;
+    padding-bottom: 5px;
+    color: hsl(170, 45%, 43%);
+}
+.sub-subcontainer2 {
+    background-color: white;
+    box-sizing: border-box;
+    border: 1px solid transparent;
+    width: 80%;
+    margin: 0 auto;
+    text-align: left;
+    padding: 6%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+.profile-photo {
+    border-radius: 50%;
+    width: 70%;
+}
+.sub-subcontainer2p {
+    font-size: 0.7rem;
+    font-weight: 400;
+    color: hsl(0, 1%, 43%);
+}
+.avartar-name {
+    font-size: 0.7rem;
+    font-weight: 700;
+}
+.avartar-role {
+    font-size: 0.54rem;
+    font-weight: 400;
+    padding-top: 3%;
+}
+.profile-image {
+    width: 20%;
+}
+.profile-info {
+    width: 45%;
+    padding-top: 2%;
+}
+.profile-details {
+    display: flex;
 }
