--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
     margin: 0 auto;
     justify-content: center;
     margin-top: 80px;
-    border: 1px solid;
+    border: 1px solid transparent;
+    box-shadow: 2px 2px 5px rgba(0.5, 0, 0, 0.5);
 }
 .primary-nav {
     display: flex;
@@ -106,7 +107,6 @@ input.email-request::placeholder {
 }
 .container-2-img2 {
     width: 80%;  
-    
 }
 .container-2-h3 {
     margin: 10% 0%;
@@ -287,4 +287,101 @@ input#email-container3::placeholder {
 .twitter-icon,
 .facebook-icon {
     width: 100%;
+}
+@media screen  and (max-width: 1440px){
+    .body {
+        font-size: none;
+    }
+    .parent-container {
+        width: 1440px;
+        border: none;
+    }
+    .primary-nav {
+        width: 100%;
+        height: 30px;
+        display: flex;
+        margin: 0 auto;
+        justify-content: space-between;
+        font-family: "Raleway", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400, 700;
+        font-style: normal;
+    }
+    .logo-img {
+        width: 8%;
+        margin-left: 2%;
+    }
+    .primary-nav-ul {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        gap: 15px;
+        margin-right: 2%;
+    }
+    .container-1 {
+        text-align: center;
+        width: 100%;
+        display: flex;
+    }
+    .container-1-img {
+        width: 80%;
+        margin: 0;
+    }
+    .container-1a {
+        order: 2;
+    }
+    .container-1b {
+        order: 1;
+    }
+    .container-1-h2 {
+        font-size: 21px;
+        margin-top: 10%;
+        margin-bottom: 2%;
+        line-height: 1.2;
+        width: 50%;
+        text-align: left;
+    }
+    .container-1p {
+        margin: 0 auto;
+        width: 50%;
+        padding: 0;
+        text-align: left;
+    }
+    .container-1p p {
+        font-size: 16px;
+        line-height: 1.1;
+    }
+    .container-1ba {
+        display: flex;
+        width: 50%;
+        margin: 0 auto;
+        gap: 10px;
+    }
+    .email-request {
+        width: 60%;
+        padding: 0;
+        margin: 4% 0%;
+        border: 1px solid rgb(117, 115, 115);
+        border-radius: 3px;
+        padding: 1% 0%;
+    }
+    .container-1-btn {
+        margin: 4% 0%;
+        width: 30%;
+        padding: 0;
+        background-color: hsl(224, 93%, 58%);
+        color: white;
+        border: 1px solid hsl(224, 93%, 58%);
+        border-radius: 4px;
+        padding: 1% 0%;
+    }
+    .container-1-btn a {
+        color: white;
+        text-decoration: none;
+        font-family: "Open Sans", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 0.8rem;
+    }
 }
